--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -13,12 +13,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Pull Trivy image
         run: docker pull aquasec/trivy:0.57.0
 
       - name: Run Trivy vulnerability scanner
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
-          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy:0.57.0 image python:3.4-alpine --exit-code 1 --format table --ignore-unfixed --severity CRITICAL,HIGH
+          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v $HOME/.cache:/root/.cache aquasec/trivy:0.57.0 image python:3.4-alpine --exit-code 1 --format table --ignore-unfixed --severity CRITICAL,HIGH
 
       - name: Upload scan results
         uses: actions/upload-artifact@v3
