--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -1,16 +1,21 @@
 name: Scan vulnerabilities
+
 on:
   schedule:
-    - cron: '0 0 * * *'
-  workflow_dispatch:
+    - cron: '0 0 * * *'  # Ejecutar diariamente a la medianoche (UTC)
+  workflow_dispatch:  # Permite ejecutar el workflow manualmente
 
 jobs:
   build:
     name: Scan Go vulnerabilities
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4.1.6
+        uses: actions/checkout@v4
+
+      - name: Pull Trivy image
+        run: docker pull aquasec/trivy:0.57.0
 
       - name: Run Trivy vulnerability scanner and create GitHub issues
         uses: knqyf263/trivy-issue-action@v0.0.6
@@ -21,3 +26,5 @@ jobs:
           label: kind/security
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TRIVY_IMAGE: aquasec/trivy:0.57.0
+          TRIVY_IMAGE_SCAN: python:3.4-alpine
