--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -1,9 +1,9 @@
+name: Scan vulnerabilities
 
-#name: Scan vulnerabilities
 on:
   schedule:
-    - cron: '0 0 * * *'  # Ejecutar diariamente a la medianoche (UTC)
-  workflow_dispatch:  # Permite ejecutar el workflow manualmente
+    - cron: '0 0 * * *'
+  workflow_dispatch:
 
 jobs:
   build:
@@ -13,6 +13,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Pull Python image
+        run: docker pull python:3.4-alpine
 
       - name: Pull Trivy image
         run: docker pull aquasec/trivy:0.57.0
