--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -15,14 +15,14 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Pull Python image
-        run: docker pull python:3.4-alpine
+        run: docker pull python:3.9-alpine  # Usar una versión más reciente
 
       - name: Pull Trivy image
         run: docker pull aquasec/trivy:0.57.0
 
       - name: Run Trivy vulnerability scanner
         run: |
-          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v $HOME/.cache:/root/.cache aquasec/trivy:0.57.0 image python:3.4-alpine --exit-code 1 --format json --ignore-unfixed --severity CRITICAL,HIGH > trivy_report.json
+          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v $HOME/.cache:/root/.cache aquasec/trivy:0.57.0 image python:3.9-alpine --exit-code 1 --format json --ignore-unfixed --severity CRITICAL,HIGH --scanners vuln > trivy_report.json
 
       - name: Upload scan results
         uses: actions/upload-artifact@v3
@@ -39,3 +39,4 @@ jobs:
           label: kind/security
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
