--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Pull Python image
-        run: docker pull python:3.9-alpine  # Usar una versión más reciente
+        run: docker pull python:3.9-alpine
 
       - name: Pull Trivy image
         run: docker pull aquasec/trivy:0.57.0
@@ -27,16 +27,5 @@ jobs:
       - name: Upload scan results
         uses: actions/upload-artifact@v3
         with:
-          name: trivy-scan-results
-          path: trivy_report.json
 
-      - name: Create GitHub issues
-        uses: knqyf263/trivy-issue-action@v0.0.6
-        with:
-          assignee: knqyf263
-          severity: CRITICAL
-          skip-dirs: integration,examples,pkg
-          label: kind/security
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
